Completando test unitarios para HU10